Phase5/negative_tests/prog3.dlp
//Missing ';' in var decl
var x = 4

return 0;